Fix compact header alignment

--- a/src/assets/styles/cmps/CompactHeader.css
+++ b/src/assets/styles/cmps/CompactHeader.css
@@ -14,11 +14,9 @@
     max-width: 1760px;
     margin: 0 auto;
     height: 100%;
-    /* padding: 0 3rem;
-    padding-top: 2rem; */
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
     align-items: flex-start;
-    justify-content: space-between;
     gap: 1rem;
 }
 
@@ -28,6 +26,7 @@
     text-decoration: none;
     color: var(--primary-clr);
     gap: 3px;
+    justify-self: start;
 }
 
 .compact-header .logo-header .icon svg {
@@ -49,11 +48,8 @@
 .compact-search-button {
     display: flex;
     align-items: center;
-    gap: 0.75rem;
     margin-block-start: 24px;
-    margin-inline-start: 104px;
     padding: 0;
-    /* padding: 0.5rem 0.5rem 0.5rem 1.5rem; */
     border-radius: 40px;
     border: 1px solid var(--gray5);
     background: var(--white);
@@ -61,6 +57,7 @@
     transition: box-shadow 0.2s ease;
     min-width: 300px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
+    justify-self: center;
 }
 
 .compact-search-button:hover {
@@ -78,15 +75,14 @@
 }
 
 .compact-search-text {
+    font-family: cereal-medium;
     font-size: 0.875rem;
-    font-weight: 600;
+    /* font-weight: 600; */
     color: var(--gray3);
     white-space: nowrap;
     cursor: pointer;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
-    /* padding: 0.25rem 0; */
 }
 
 .compact-search-icon {
@@ -104,6 +100,7 @@
     height: 32px;
     border-radius: 50%;
     margin-inline-end: 0.3rem;
+    margin-inline-start: 1rem;
     background-color: var(--primary-clr);
     color: var(--white);
     display: flex;
@@ -130,6 +127,7 @@
     display: flex;
     align-items: center;
     height: 80px;
+    justify-self: end;
 }
 
 .compact-header .header-actions .host-link {
@@ -194,12 +192,14 @@
 }
 
 .compact-header button {
-    margin-inline-end: 0;
+    margin-inline: 0;
+    width: 374px;
 }
 
 .compact-header .anywhere-icon {
     margin-inline-start: 0.5rem;
-    height: 46px;
+    height: 48px;
+    width: 48px;
 }
 
 body:has(.compact-header) .stay-index {
@@ -224,18 +224,17 @@ body:has(.compact-header) .main-container>.stay-details {
 
 .compact-header.no-sticky {
     position: absolute;
-
-    .logo-header .icon svg {
-        margin-inline-start: 5rem;
-    }
-
-    .header-actions button[aria-label="Main menu"] {
-        margin-inline-end: 5rem;
-    }
 }
 
+.compact-header.no-sticky .logo-header .icon svg {
+    margin-inline-start: 5rem;
+}
 
-    .compact-header .header-actions button.hamburger-menu-btn.hamburger-wide {
-        width: 5rem;
-        border-radius: 2rem;
-    }
+.compact-header.no-sticky .header-actions button[aria-label="Main menu"] {
+    margin-inline-end: 5rem;
+}
+
+.compact-header .header-actions button.hamburger-menu-btn.hamburger-wide {
+    width: 5rem;
+    border-radius: 2rem;
+}
